// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Utils Examples > Integration Example > takes scene snapshot 1`] = `
{
  "entities": [
    {
      "id": 1,
      "name": "Entity1",
    },
    {
      "id": 2,
      "name": "Entity2",
    },
    {
      "id": 3,
      "name": "Entity3",
    },
  ],
  "name": "TestScene",
}
`;

exports[`Test Utils Examples > Snapshots > handles dynamic values 1`] = `
{
  "data": [
    1,
    2,
    3,
  ],
  "id": "<uuid>",
  "name": "Test",
}
`;

exports[`Test Utils Examples > Snapshots > takes snapshot of scene 1`] = `
{
  "entities": [
    {
      "name": "Entity1",
    },
    {
      "name": "Entity2",
    },
  ],
  "name": "TestScene",
}
`;
